opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/parsexp_io"
bug-reports: "https://github.com/janestreet/parsexp_io/issues"
dev-repo: "https://github.com/janestreet/parsexp_io.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "parsexp_io" "--root" "." "-j" jobs "@install"]
]
depends: [
  "base"
  "jbuilder"                {build & >= "1.0+beta2"}
  "parsexp"
  "ppx_driver"
  "ppx_js_style"
  "stdio"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
S-expression parsing library (IO functions)

Parsexp_io provides functions for loading s-expressions from files.
"
