opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/parsexp_io"
bug-reports: "https://github.com/janestreet/parsexp_io/issues"
dev-repo: "git+https://github.com/janestreet/parsexp_io.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/parsexp_io/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "parsexp"
  "ppx_js_style"
  "stdio"
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "S-expression parsing library (IO functions)"
description: "
Parsexp_io provides functions for loading s-expressions from files.
"
